cabal-version:      3.0
name:               deeproute
version:            0.1.0.0
synopsis:           Simple and performant routing and HTTP utilities, meant to be used on top of wai.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Edmund Noble
maintainer:         edmund@kadena.io

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Web.DeepRoute

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
        , aeson >= 1.4
        , aeson-pretty >= 0.8
        , bytestring >= 0.10
        , containers
        , dlist
        , http-api-data
        , http-types >= 0.12
        , lens-aeson >= 1.1
        , mtl
        , text >= 1.2
        , unordered-containers
    hs-source-dirs:   src
    default-language: Haskell2010


library deeproute-wai
    visibility: public
    exposed-modules:
        Web.DeepRoute.Wai

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
        , aeson >= 1.4
        , aeson-pretty >= 0.8
        , bytestring >= 0.10
        , case-insensitive
        , containers
        , dlist
        , deeproute
        , http-api-data
        , http-client
        , http-media
        , http-types >= 0.12
        , lens-aeson >= 1.1
        , mtl
        , text >= 1.2
        , unordered-containers
        , wai
    hs-source-dirs:   src-wai
    default-language: Haskell2010

library deeproute-client
    visibility: public
    exposed-modules:
        Web.DeepRoute.Client

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
        , aeson >= 1.4
        , aeson-pretty >= 0.8
        , bytestring >= 0.10
        , containers
        , dlist
        , deeproute
        , http-api-data
        , http-client
        , http-types >= 0.12
        , lens-aeson >= 1.1
        , mtl
        , text >= 1.2
        , unordered-containers
    hs-source-dirs:   src-client
    default-language: Haskell2010

