cabal-version:      3.0
name:               deeproute
version:            0.1.0.0
synopsis:           Simple and performant routing and HTTP utilities, meant to be used on top of wai.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Edmund Noble
maintainer:         edmund@kadena.io

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Web.DeepRoute

    build-depends:
          base >= 4.14
        , aeson
        , bytestring
        , containers
        , http-api-data
        , http-types
        , mtl
        , text
    hs-source-dirs:   src
    default-language: Haskell2010

library deeproute-wai
    visibility: public
    exposed-modules:
        Web.DeepRoute.Wai

    build-depends:
          base >= 4.14
        , aeson
        , bytestring
        , case-insensitive
        , containers
        , deeproute
        , http-api-data
        , http-media
        , http-types
        , mtl
        , text
        , unordered-containers
        , wai
    hs-source-dirs:   src-wai
    default-language: Haskell2010

library deeproute-client
    visibility: public
    exposed-modules:
        Web.DeepRoute.Client

    build-depends:
          base >= 4.14
        , aeson
        , bytestring
        , containers
        , deeproute
        , http-api-data
        , http-client
        , http-types
        , mtl
        , text
    hs-source-dirs:   src-client
    default-language: Haskell2010

